<resources>
    <string name="app_name">JConnect</string>

    <!-- Main menu -->
    <string name="menu_add_contact">Добавить контакт</string>
    <string name="menu_choose_contact">Выбрать</string>
    <string name="menu_delete_contact">Удалить</string>
    <string name="menu_cancel_choice">Отменить</string>
    <string name="menu_connect">Соединение</string>
    <string name="menu_disconnect">Отключиться</string>

    <string name="menu_muc_participant_list">Участники</string>
    <string name="menu_leave_muc">Покинуть комнату</string>
    <string name="menu_add_bookmark">В закладки</string>

    <!-- Contact add dialog -->
    <string name="contact_dialog_add_title">Добавить контакт</string>
    <string name="contact_dialog_add_jid">ID</string>
    <string name="contact_dialog_add_name">Имя</string>
    <string name="contact_dialog_add_submit_button">OK</string>
    <string name="contact_dialog_add_cancel_button">Отмена</string>
    <string name="contact_dialog_add_field_error_begin">Поле</string>
    <string name="contact_dialog_add_empty_field_error">не должно быть пустым</string>
    <string name="contact_dialog_add_jid_field_error">должно иметь формат user@server.com</string>

    <!-- Main Activity Toasts -->
    <string name="account_not_selected">Для подключения необходмо выбрать учетную запись</string>
    <string name="not_authenticated">Не авторизован</string>
    <string name="muc_joined">вход выполнен</string>
    <string name="bookmark_added_begin">Комната</string>
    <string name="bookmark_added_end">добавлена в закладки</string>

    <!-- Main Activity Drawer -->
    <string name="main_activity_drawer_title">Главное меню</string>
    <string name="main_activity_drawer_menu_exit">Выйти</string>
    <string name="main_activity_drawer_menu_accounts">Учетные записи</string>
    <string name="main_activity_drawer_menu_bookmarks">Закладки</string>
    <string name="main_activity_drawer_menu_service_discover">Обзор сервисов</string>
    <string name="main_activity_drawer_menu_settings">Настройки</string>

    <!-- Main Status Title -->
    <string name="main_activity_status_online">В сети</string>
    <string name="main_activity_status_offline">Оффлайн</string>

    <!-- Muc menu -->
    <string name="muc_menu_leave_muc">Покинуть комнату</string>
    <string name="muc_menu_add_bookmark">В закладки</string>

    <!-- Service discover menu -->
    <string name="menu_service_discover_join_muc">Войти в комнату</string>

    <!-- Accounts -->
    <string name="title_accounts_activity">Учетные записи</string>
    <string name="accounts_item_edit_button_description">Редактировать</string>

    <!-- Accounts menu -->
    <string name="accounts_menu_choose">Выбрать</string>
    <string name="accounts_menu_cancel_choise">Отменить</string>
    <string name="accounts_menu_add">Добавить</string>
    <string name="accounts_menu_delete_chosen">Удалить</string>

    <!-- Accounts dialog -->
    <string name="accounts_dialog_add_title">Добавить учетную запись</string>
    <string name="accounts_dialog_edit_title">Изменить учетную запись</string>
    <string name="accounts_dialog_server">Адрес сервера</string>
    <string name="accounts_dialog_login">Логин</string>
    <string name="accounts_dialog_password">Пароль</string>
    <string name="accounts_dialog_port">Порт</string>
    <string name="accounts_dialog_submit_button">OK</string>
    <string name="accounts_dialog_cancel_button">Отмена</string>
    <string name="accounts_dialog_field_error_beginning">Поле</string>
    <string name="accounts_dialog_empty_field_error">не должно быть пустым</string>
    <string name="accounts_dialog_server_address_field_error">должно иметь формат server.com</string>
    <string name="accounts_dialog_digits_only_error">должно иметь только цифры</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_chat">Чат</string>
    <string name="title_muc_activity_chat">Комната</string>
    <string name="title_service_discover_activity">Обзор сервисов</string>
    <string name="chat_message_send">Отправить</string>
    <string name="contact_list_header">Список контактов</string>
    <string name="muc_list_header">Список комнат</string>

    <!-- Service discover fragment -->
    <string name="service_discover_button">Обзор</string>

    <!-- Bookmarks -->
    <string name="bookmarks_title">Закладки</string>
    <string name="bookmarks_menu_choose">Выбрать</string>
    <string name="bookmarks_menu_add">Добавить</string>
    <string name="bookmarks_item_edit_button_description">Редактировать</string>
    <string name="bookmarks_delete_chosen">Удалить</string>
    <string name="bookmarks_cancel_choise">Отмена</string>

    <!-- Bookmarks dialog fragment -->
    <string name="bookmarks_dialog_add_title">Добавить в закладки</string>
    <string name="bookmarks_dialog_edit_title">Изменить закладку</string>
    <string name="bookmarks_dialog_jid">Адрес комнаты</string>
    <string name="bookmarks_dialog_name">Имя комнаты</string>
    <string name="bookmarks_dialog_nick">Ник</string>
    <string name="bookmarks_dialog_password">Пароль</string>
    <string name="bookmarks_dialog_submit_button">OK</string>
    <string name="bookmarks_dialog_cancel_button">Отмена</string>
    <string name="bookmarks_dialog_field_error_beginning">Поле</string>
    <string name="bookmarks_dialog_empty_field_error">не должно быть пустым</string>
    <string name="bookmarks_dialog_room_address_field_error">должно иметь формат room@conference.server.com</string>

    <!-- Captcha dialog fragment -->
    <string name="captcha_dialog_title">Для входа в комнату группы необходимо пройти проверку Captcha:</string>
    <string name="captcha_dialog_ok">OK</string>

    <!-- Join muc dialog fragment -->
    <string name="join_muc_dialog_title">Вход в комнату:</string>
    <string name="join_muc_dialog_nick_title">Ник:</string>
    <string name="join_muc_dialog_password_title">Пароль:</string>
    <string name="join_muc_dialog_ok">OK</string>

    <!-- Participants drawer -->
    <string name="participants_drawer_title">Участники</string>

    <!-- Strings related to Settings -->
    <string name="title_activity_settings">Настройки</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Уведомления</string>

    <string name="pref_title_new_message_notifications">Уведомления о новых сообщениях</string>

    <string name="pref_title_ringtone">Звук</string>
    <string name="pref_ringtone_silent">Без звука</string>

    <string name="pref_title_vibrate">Вибрация</string>

</resources>
