<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jabber.jconnect.MainActivity">

    <group android:id="@+id/main_menu">

        <item
            android:id="@+id/menu_connect"
            android:orderInCategory="0"
            android:title="@string/menu_connect"
            app:showAsAction="ifRoom|withText" />

        <item
            android:id="@+id/menu_add_contact"
            android:orderInCategory="0"
            android:title="@string/menu_add_contact"
            app:showAsAction="ifRoom|withText" />

        <item
            android:id="@+id/menu_cancel_choice"
            android:orderInCategory="0"
            android:title="@string/menu_cancel_choice"
            android:visible="false"
            app:showAsAction="ifRoom|withText" />

        <item
            android:id="@+id/menu_delete_contact"
            android:orderInCategory="0"
            android:title="@string/menu_delete_contact"
            android:visible="false"
            app:showAsAction="ifRoom|withText" />

        <item
            android:id="@+id/menu_choose_contact"
            android:orderInCategory="0"
            android:title="@string/menu_choose_contact"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_disconnect"
            android:orderInCategory="0"
            android:title="@string/menu_disconnect"
            app:showAsAction="never" />

    </group>

    <group android:id="@+id/muc_menu"
        android:visible="false">

        <item
            android:id="@+id/menu_muc_participant_list"
            android:orderInCategory="0"
            android:title="@string/menu_muc_participant_list"
            app:showAsAction="ifRoom|withText"/>

        <item
            android:id="@+id/menu_leave_muc"
            android:orderInCategory="0"
            android:title="@string/menu_leave_muc"
            app:showAsAction="never" />

        <item
            android:id="@+id/menu_add_bookmark"
            android:orderInCategory="0"
            android:title="@string/menu_add_bookmark"
            app:showAsAction="never" />

    </group>

</menu>
