<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jabber.jconnect.AccountsActivity">

    <item
        android:id="@+id/accounts_menu_choose"
        android:orderInCategory="0"
        android:title="@string/accounts_menu_choose"
        app:showAsAction="never" />

    <item
        android:id="@+id/accounts_menu_add"
        android:orderInCategory="0"
        android:title="@string/accounts_menu_add"
        app:showAsAction="never" />

    <item
        android:id="@+id/accounts_menu_cancel_choise"
        android:orderInCategory="0"
        android:title="@string/accounts_menu_cancel_choise"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/accounts_menu_delete_chosen"
        android:orderInCategory="0"
        android:title="@string/accounts_menu_delete_chosen"
        app:showAsAction="ifRoom|withText" />

</menu>