<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jabber.jconnect.AccountsActivity">

    <item
        android:id="@+id/bookmarks_menu_choose"
        android:orderInCategory="0"
        android:title="@string/bookmarks_menu_choose"
        app:showAsAction="never" />

    <item
        android:id="@+id/bookmarks_menu_add"
        android:orderInCategory="0"
        android:title="@string/bookmarks_menu_add"
        app:showAsAction="never" />

    <item
        android:id="@+id/bookmarks_cancel_choise"
        android:orderInCategory="0"
        android:title="@string/bookmarks_cancel_choise"
        app:showAsAction="ifRoom|withText"
        android:visible="false" />

    <item
        android:id="@+id/bookmarks_delete_chosen"
        android:orderInCategory="0"
        android:title="@string/bookmarks_delete_chosen"
        app:showAsAction="ifRoom|withText"
        android:visible="false" />

</menu>