<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jabber.jconnect.MucChatActivity">

    <item
        android:id="@+id/menu_muc_participant_list"
        android:orderInCategory="0"
        android:title="@string/menu_muc_participant_list"
        app:showAsAction="ifRoom|withText" />

    <item
        android:id="@+id/muc_menu_leave_muc"
        android:orderInCategory="0"
        android:title="@string/muc_menu_leave_muc"
        app:showAsAction="never" />

    <item
        android:id="@+id/muc_menu_add_bookmark"
        android:orderInCategory="0"
        android:title="@string/muc_menu_add_bookmark"
        app:showAsAction="never" />

</menu>